# devdev

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Postmortem.md  README.md  ROADMAP.md  SECURITY.md  VALIDATION.md  claims.toml  clippy.out  testnorun.out
.devdev/: pr-review.md  rust-style.md  vibe.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  live-tests.yml  release.yml
capabilities/: 00-vfs-core.md  01-vfs-loader.md  02-wasm-toolchain.md  03-wasm-engine.md  04-tool-registry.md  05-virtual-git-core.md  06-virtual-git-commands.md  07-shell-parser.md  08-shell-builtins.md  09-shell-executor.md  10-acp-protocol.md  11-acp-client.md  12-acp-hooks.md  13-sandbox-integration.md  14-test-harness.md  15-vfs-serialization.md  16-multi-repo-vfs.md  17-daemon-lifecycle.md  18-chat-tui-headless.md  19-task-manager.md  20-github-adapter.md  21-session-router.md  22-monitor-pr-task.md  23-engine-cleanup.md  25-vibe-check.md  28-mcp-tool-injection.md  29-workspace-repo-setup.md  README.md
crates/devdev-acp/: Cargo.toml
crates/devdev-acp/src/: auth.rs  client.rs  handler.rs  hooks.rs  lib.rs  ndjson.rs  protocol.rs  terminal.rs  trace.rs  transport.rs  types.rs
crates/devdev-acp/tests/: acceptance.rs  acceptance_client.rs  acceptance_hooks.rs
crates/devdev-cli/: Cargo.toml
crates/devdev-cli/src/: acp_backend.rs  agent_command.rs  config.rs  daemon_cli.rs  eval.rs  lib.rs  main.rs  output.rs  preferences.rs  prompt.rs  realpath_shim.rs  stub_git.rs  tracing_setup.rs  verdict.rs  vibe_check_prompt.md
crates/devdev-cli/tests/: acceptance_cli.rs  acceptance_daemon.rs  acceptance_eval.rs  acceptance_preferences.rs  e2e.rs  live_ado_pr.rs  live_credential_chain.rs  live_daemon_fs_write.rs  live_host_probe.rs  live_mcp.rs  live_shim_smoke.rs  live_workspace_cwd.rs
crates/devdev-daemon/: Cargo.toml
crates/devdev-daemon/src/: checkpoint.rs  credentials.rs  dispatch.rs  host_registry.rs  ipc.rs  ledger.rs  lib.rs  pid.rs  router.rs  runner.rs  secrets.rs  server.rs
crates/devdev-daemon/src/mcp/: http.rs  mod.rs  provider.rs  tools.rs
crates/devdev-daemon/tests/: acceptance.rs  acceptance_router.rs  e2e_pr_shepherding.rs
crates/devdev-git/: Cargo.toml
crates/devdev-git/src/: lib.rs  loader.rs
crates/devdev-git/src/commands/: blame.rs  branch.rs  diff.rs  log.rs  ls_files.rs  mod.rs  rev_parse.rs  show.rs  status.rs  tag.rs
crates/devdev-git/tests/: acceptance.rs  acceptance_commands.rs
crates/devdev-integrations/: Cargo.toml
crates/devdev-integrations/src/: azure_devops.rs  github.rs  github_mock.rs  host.rs  lib.rs  mock.rs  rate_limit.rs  types.rs
crates/devdev-integrations/tests/: acceptance.rs
crates/devdev-scenarios/: Cargo.toml
crates/devdev-scenarios/catalog/: README.md  S05-teardown-leaves-nothing.md  S07-repo-watch-task-lifecycle.md  S08-multi-host-registry.md
crates/devdev-scenarios/src/: lib.rs
crates/devdev-scenarios/tests/: dep_guard.rs  integrity.rs  scenarios.rs
crates/devdev-shell/: Cargo.toml
crates/devdev-shell/src/: ast.rs  builtins.rs  dispatch.rs  error.rs  executor.rs  expand.rs  lib.rs  parser.rs  session.rs  state.rs  tokenizer.rs
crates/devdev-shell/tests/: acceptance.rs  acceptance_builtins.rs  acceptance_executor.rs
crates/devdev-tasks/: Cargo.toml
crates/devdev-tasks/src/: agent.rs  approval.rs  events.rs  ledger.rs  lib.rs  monitor_pr.rs  pr_ref.rs  registry.rs  repo_watch.rs  review.rs  scheduler.rs  task.rs
crates/devdev-tasks/tests/: acceptance.rs  acceptance_monitor_pr.rs
crates/devdev-test-env/: Cargo.toml
crates/devdev-test-env/src/: ado.rs  github.rs  lib.rs  main.rs  manifest.rs  reset.rs  secret.rs
crates/devdev-tui/: Cargo.toml
crates/devdev-tui/src/: chat.rs  headless.rs  ipc_client.rs  lib.rs
crates/devdev-tui/tests/: acceptance.rs
crates/devdev-vfs/: Cargo.toml
crates/devdev-vfs/src/: glob.rs  lib.rs  loader.rs  memfs.rs  path.rs  types.rs
crates/devdev-vfs/tests/: acceptance.rs  acceptance_checkpoint.rs  acceptance_loader.rs  acceptance_mounts.rs
crates/devdev-wasm/: Cargo.toml
crates/devdev-wasm/src/: engine.rs  lib.rs  registry.rs
crates/devdev-wasm/src/native/: diff.rs  find.rs  grep.rs  mod.rs
crates/devdev-wasm/tests/: acceptance.rs  acceptance_registry.rs  integration_tools.rs
crates/devdev-workspace/: Cargo.toml  README.md  build.rs
crates/devdev-workspace/src/: exec.rs  lib.rs  mem.rs  pty.rs
crates/devdev-workspace/src/driver/: fuse.rs  mod.rs  winfsp.rs  winfsp_sys.rs
crates/devdev-workspace/tests/: cargo_build.rs  encapsulation.rs  env_sanitization.rs  fuse_mount.rs  placeholder.rs  real_workload.rs  repo_setup.rs  winfsp_mount.rs  winfsp_node_stat_diag.rs
docs/internals/: ghe-gap.md  live-test-fixtures.md  outline.md  spec-copilot-integration.md  spec-repo-hosts.md  spec-virtual-git.md  spec-wasm-tools.md
docs/internals/capabilities/: 10-acp-protocol.md  12-acp-hooks.md  15-vfs-serialization.md  17-daemon-lifecycle.md  22-monitor-pr-task.md  23-engine-cleanup.md  24-e2e-pr-shepherding.md  25-vibe-check.md  26-scout-router.md  27-idempotency-ledger.md  28-mcp-tool-injection.md
samples/pr-reviewer/: Cargo.toml
samples/pr-reviewer/src/: main.rs
scripts/: devdev-secrets.ps1  seed-ci-secrets.ps1  validate.ps1  verify-gh-apps.ps1  verify-gh-e2e.ps1
spirit/: 01-concept.md  02-workspace-contract.md  03-agent-loop.md  04-tasks.md  05-validation.md  README.md  outline.md  phase-2-spec.md  research-acp.md  spec-copilot-integration.md  spec-shell-parser.md  spec-virtual-filesystem.md  spec-virtual-git.md  spec-wasm-tools.md  testing.md
spirit/scenarios/: README.md  S01-empty-workspace-up-and-down.md  S06-checkpoint-round-trip.md
test-env/: README.md  manifest.json  manifest.lock.json
tests/fixtures/: README.md
tools/: build-tools.ps1  build-tools.sh
