[workspace]
resolver = "2"
members = [
    "crates/devdev-vfs",
    "crates/devdev-wasm",
    "crates/devdev-git",
    "crates/devdev-shell",
    "crates/devdev-acp",
    "crates/devdev-cli",
    "crates/devdev-integrations",
    "crates/devdev-daemon",
    "crates/devdev-tasks",
    "crates/devdev-tui",
    "crates/devdev-scenarios",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# WASM runtime
wasmtime = "31"
wasmtime-wasi = "31"

# Git
git2 = "0.20"

# Glob matching
globset = "0.4"

# Regex (used by native grep)
regex = "1"

# Text diffing (used by native diff)
similar = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Testing
tempfile = "3"
