[workspace]
resolver = "2"
members = [
    "crates/devdev-acp",
    "crates/devdev-cli",
    "crates/devdev-integrations",
    "crates/devdev-daemon",
    "crates/devdev-tasks",
    "crates/devdev-tui",
    "crates/devdev-scenarios",
    "crates/devdev-workspace",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/goldenwitch/devdev"
authors = ["goldenwitch"]
publish = false

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Base64 (used by ADO Basic-auth header construction)
base64 = "0.22"

# MCP (Model Context Protocol) — used by devdev-daemon to expose DevDev
# state to Copilot agents via Streamable HTTP. PoC at target/tmp/poc-mcp-rs/.
rmcp = { version = "0.9", features = [
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-server",
] }
axum = "0.8"
tokio-util = "0.7"
schemars = "1"

# Virtual filesystem drivers (Linux only — cfg-gated in consumers)
fuser = "0.15"
libc = "0.2"

# Cross-platform PTY
portable-pty = "0.9"

# Testing
tempfile = "3"

# ---------------------------------------------------------------------------
# Release packaging (cargo-dist). Linux + Windows x86_64 only; no macOS
# in this pass. Single shippable: the `devdev` binary from devdev-cli.
# ---------------------------------------------------------------------------
[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = "github"
installers = []
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
pr-run-mode = "plan"
allow-dirty = ["ci"]

[profile.dist]
inherits = "release"
lto = "thin"
