[package]
name = "devdev-cli"
description = "DevDev CLI binary (daemon lifecycle subcommands)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "devdev"
path = "src/main.rs"

[dependencies]
devdev-acp = { path = "../devdev-acp" }
devdev-daemon = { path = "../devdev-daemon" }
devdev-tasks = { path = "../devdev-tasks" }
devdev-integrations = { path = "../devdev-integrations" }
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
devdev-workspace = { path = "../devdev-workspace" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
serial_test = { workspace = true }
