[package]
name = "devdev-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
devdev-integrations = { path = "../devdev-integrations" }
devdev-tasks = { path = "../devdev-tasks" }
devdev-vfs = { path = "../devdev-vfs" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
devdev-integrations = { path = "../devdev-integrations" }
devdev-tasks = { path = "../devdev-tasks" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
