[package]
name = "devdev-git"
description = "In-memory Git operations for DevDev sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
devdev-vfs = { path = "../devdev-vfs" }
git2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
