[package]
name = "devdev-scenarios"
description = "User-surface scenario tests for DevDev. Dev-only."
version.workspace = true
edition.workspace = true
publish = false

# The scenarios crate deliberately depends ONLY on types a real user
# of DevDev would interact with:
#
#   * `devdev-daemon::ipc` — the TCP/NDJSON protocol a shell script
#     could also speak.
#   * `devdev-workspace` — the public checkpoint format a user could
#     inspect on disk.
#
# Engine internals (`devdev-acp`) are NEVER direct deps. A CI guard
# greps `cargo tree` to keep it that way.
#
# `assert_cmd` is a regular dep because the harness itself (not just
# tests) resolves the `devdev` binary via `cargo_bin`. This crate is
# `publish = false`, so bloating release artifacts is a non-concern.
[dependencies]
devdev-daemon = { path = "../devdev-daemon" }
devdev-workspace = { path = "../devdev-workspace" }
anyhow = { workspace = true }
assert_cmd = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
