[package]
name = "devdev-tasks"
description = "Task model and implementations for DevDev (monitor-pr, evaluate, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
devdev-integrations = { path = "../devdev-integrations" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
