[package]
name = "devdev-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
devdev-daemon = { path = "../devdev-daemon" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
