[package]
name = "devdev-vfs"
description = "In-memory virtual filesystem for DevDev sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
